src/main/resources/static/css/style.css
*{
    Font-Family: 'Karla', Sans-Serif;
}

h1, h2, h3, h4 , h5, .btn, .date, .navbar-brand, .nav-link, .nav-item{
    Font-Family: 'Rubik', Sans-Serif;
}

body{
    background: url("/img/whitey.png");
}

.navbar{
    border-radius: 0 0 .70rem .70rem;
}

.scroller{
	position: relative;
    height: calc(90vh - 90px);
	overflow-x: hidden;
	overflow-y: scroll;
	list-style: none;
}
.scroller::-webkit-scrollbar {
    display: none;
}

.card{
    border-radius: .70rem;
    border: 0px solid;
}

